Add getProducts endpoint, .gitignore
